--- a/crush-rules/default-ssd-hdd.conf
+++ b/crush-rules/default-ssd-hdd.conf
@@ -29,63 +29,63 @@ type 9 region
 type 10 root
 
 # buckets
-host ceph-osd2 {
+host ceph-osd1 {
 	id -2		# do not change unnecessarily
 	# weight 0.180
 	alg straw
 	hash 0	# rjenkins1
 	item osd.0 weight 0.090
-	item osd.2 weight 0.090
+	item osd.1 weight 0.090
 }
-host ceph-osd1 {
+host ceph-osd2 {
 	id -3		# do not change unnecessarily
 	# weight 0.180
 	alg straw
 	hash 0	# rjenkins1
-	item osd.1 weight 0.090
+	item osd.2 weight 0.090
 	item osd.3 weight 0.090
 }
-host ceph-osd4 {
+host ceph-osd3 {
 	id -4		# do not change unnecessarily
 	# weight 0.871
 	alg straw
 	hash 0	# rjenkins1
 	item osd.4 weight 0.436
-	item osd.7 weight 0.436
+	item osd.5 weight 0.436
 }
-host ceph-osd3 {
+host ceph-osd4 {
 	id -5		# do not change unnecessarily
 	# weight 0.871
 	alg straw
 	hash 0	# rjenkins1
-	item osd.5 weight 0.436
 	item osd.6 weight 0.436
+	item osd.7 weight 0.436
 }
 root default {
 	id -1		# do not change unnecessarily
-	# weight 4.000
+	# weight 2.103
 	alg straw
 	hash 0	# rjenkins1
-	item ceph-osd2 weight 1.000
-	item ceph-osd1 weight 1.000
-	item ceph-osd4 weight 1.000
-	item ceph-osd3 weight 1.000
-}
-root hdd_default {
-	id -6		# do not change unnecessarily
-	# weight 2.00
-	alg straw
-	hash 0	# rjenkins1
-	item ceph-osd4 weight 1.00
-	item ceph-osd3 weight 1.00
+	item ceph-osd1 weight 0.180
+	item ceph-osd2 weight 0.180
+	item ceph-osd3 weight 0.871
+	item ceph-osd4 weight 0.871
 }
 root ssd_default {
-	id -7		# do not change unnecessarily
-	# weight 2.00
+	id -6		# do not change unnecessarily
+	# weight 2.103
 	alg straw
 	hash 0	# rjenkins1
-	item ceph-osd2 weight 1.000
-	item ceph-osd1 weight 1.000
+	item ceph-osd1 weight 0.180
+	item ceph-osd2 weight 0.180
+}
+root hdd_default {
+	id -7		# do not change unnecessarily
+	# weight 2.103
+	alg straw
+	hash 0	# rjenkins1
+	item ceph-osd3 weight 0.871
+	item ceph-osd4 weight 0.871
 }
 
 # rules
@@ -98,21 +98,23 @@ rule replicated_ruleset {
 	step chooseleaf firstn 0 type host
 	step emit
 }
-rule replicated_hdd_ruleset {
+
+rule ssd_replicated_ruleset {
 	ruleset 1
 	type replicated
 	min_size 1
 	max_size 10
-	step take hdd_default
+	step take ssd_default
 	step chooseleaf firstn 0 type host
 	step emit
 }
-rule replicated_ssd_ruleset {
+
+rule hdd_replicated_ruleset {
 	ruleset 2
 	type replicated
 	min_size 1
 	max_size 10
-	step take ssd_default
+	step take hdd_default
 	step chooseleaf firstn 0 type host
 	step emit
 }
