--- a/crush-rules/default-ssd-hdd.conf
+++ b/crush-rules/default-ssd-hdd.conf
@@ -14,6 +14,15 @@ device 4 osd.4
 device 5 osd.5
 device 6 osd.6
 device 7 osd.7
+device 8 osd.8
+device 9 osd.9
+device 10 osd.10
+device 11 osd.11
+device 12 osd.12
+device 13 osd.13
+device 14 osd.14
+device 15 osd.15
+device 16 osd.16
 
 # types
 type 0 osd
@@ -29,24 +38,8 @@ type 9 region
 type 10 root
 
 # buckets
-host ceph-osd1 {
-	id -2		# do not change unnecessarily
-	# weight 0.180
-	alg straw
-	hash 0	# rjenkins1
-	item osd.0 weight 0.090
-	item osd.1 weight 0.090
-}
-host ceph-osd2 {
-	id -3		# do not change unnecessarily
-	# weight 0.180
-	alg straw
-	hash 0	# rjenkins1
-	item osd.2 weight 0.090
-	item osd.3 weight 0.090
-}
 host ceph-osd3 {
-	id -4		# do not change unnecessarily
+	id -1		# do not change unnecessarily
 	# weight 0.871
 	alg straw
 	hash 0	# rjenkins1
@@ -54,38 +47,117 @@ host ceph-osd3 {
 	item osd.5 weight 0.436
 }
 host ceph-osd4 {
-	id -5		# do not change unnecessarily
+	id -2		# do not change unnecessarily
 	# weight 0.871
 	alg straw
 	hash 0	# rjenkins1
 	item osd.6 weight 0.436
 	item osd.7 weight 0.436
 }
-root default {
-	id -1		# do not change unnecessarily
-	# weight 2.103
+host ceph-osd8 {
+	id -3		# do not change unnecessarily
+	# weight 0.417
 	alg straw
 	hash 0	# rjenkins1
-	item ceph-osd1 weight 0.180
-	item ceph-osd2 weight 0.180
-	item ceph-osd3 weight 0.871
-	item ceph-osd4 weight 0.871
+	item osd.8 weight 0.208
+	item osd.9 weight 0.208
 }
-root ssd_default {
+host ceph-osd1 {
+	id -5		# do not change unnecessarily
+	# weight 0.180
+	alg straw
+	hash 0	# rjenkins1
+	item osd.0 weight 0.090
+	item osd.1 weight 0.090
+}
+host ceph-osd2 {
 	id -6		# do not change unnecessarily
-	# weight 2.103
+	# weight 0.180
 	alg straw
 	hash 0	# rjenkins1
-	item ceph-osd1 weight 0.180
-	item ceph-osd2 weight 0.180
+	item osd.2 weight 0.090
+	item osd.3 weight 0.090
 }
-root hdd_default {
+host ceph-osd5 {
 	id -7		# do not change unnecessarily
-	# weight 2.103
+	# weight 0.455
+	alg straw
+	hash 0	# rjenkins1
+	item osd.14 weight 0.455
+}
+host ceph-osd6 {
+	id -8		# do not change unnecessarily
+	# weight 0.455
+	alg straw
+	hash 0	# rjenkins1
+	item osd.15 weight 0.455
+}
+host ceph-osd9 {
+	id -9		# do not change unnecessarily
+	# weight 0.289
+	alg straw
+	hash 0	# rjenkins1
+	item osd.10 weight 0.199
+	item osd.11 weight 0.090
+}
+host ceph-osd10 {
+	id -10		# do not change unnecessarily
+	# weight 0.289
+	alg straw
+	hash 0	# rjenkins1
+	item osd.12 weight 0.199
+	item osd.13 weight 0.090
+}
+host ceph-osd7 {
+	id -11		# do not change unnecessarily
+	# weight 0.909
+	alg straw
+	hash 0	# rjenkins1
+	item osd.16 weight 0.909
+}
+root default {
+	id -4		# do not change unnecessarily
+	# weight 4.916
 	alg straw
 	hash 0	# rjenkins1
 	item ceph-osd3 weight 0.871
 	item ceph-osd4 weight 0.871
+	item ceph-osd8 weight 0.417
+	item ceph-osd1 weight 0.180
+	item ceph-osd2 weight 0.180
+	item ceph-osd5 weight 0.455
+	item ceph-osd6 weight 0.455
+	item ceph-osd9 weight 0.289
+	item ceph-osd10 weight 0.289
+	item ceph-osd7 weight 0.909
+}
+
+root hybrid_root {
+	id -12		# do not change unnecessarily
+	alg straw
+	hash 0	# rjenkins1
+	item ceph-osd5 weight 0.455
+	item ceph-osd6 weight 0.455
+	item ceph-osd7 weight 0.909
+}
+
+root ssd_root {
+	id -13		# do not change unnecessarily
+	alg straw
+	hash 0	# rjenkins1
+	item ceph-osd1 weight 0.180
+	item ceph-osd2 weight 0.180
+	item ceph-osd9 weight 0.289
+	item ceph-osd10 weight 0.289
+}
+
+root hdd_root {
+	id -14		# do not change unnecessarily
+	alg straw
+	hash 0	# rjenkins1
+	item ceph-osd3 weight 0.871
+	item ceph-osd4 weight 0.871
+	item ceph-osd8 weight 0.417
 }
 
 # rules
@@ -99,24 +171,37 @@ rule replicated_ruleset {
 	step emit
 }
 
-rule ssd_replicated_ruleset {
+# rules
+rule hybrid_ruleset {
 	ruleset 1
 	type replicated
 	min_size 1
-	max_size 10
-	step take ssd_default
+	max_size 5
+	step take hybrid_root
 	step chooseleaf firstn 0 type host
 	step emit
 }
 
-rule hdd_replicated_ruleset {
+# rules
+rule ssd_ruleset {
 	ruleset 2
 	type replicated
 	min_size 1
-	max_size 10
-	step take hdd_default
+	max_size 1
+	step take ssd_root
 	step chooseleaf firstn 0 type host
 	step emit
 }
 
+
+# rules
+rule hdd_ruleset {
+	ruleset 3
+	type replicated
+	min_size 1
+	max_size 10
+	step take hdd_root
+	step chooseleaf firstn 0 type host
+	step emit
+}
 # end crush map
